update the working timer

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <input type="submit" value="&#128269;" id="search">
                 </form>
                     Items Found -->
-                    <p>Timer To Next reminder:</p> <p id="timer"></p>
+                    <p>Timer To Next reminder:</p> <p id="timer">dhm</p>
                 </section>
             </section>
           
