--- a/verse.html
+++ b/verse.html
@@ -4,13 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Lora:ital@1&family=Ubuntu&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>Bible Reading</title>
 </head>
 <body>
-    <div id="bibleScriptures"></div>
-   <!-- <h1>Genesis</h1> 
-<h2>chapter 20</h2>
-<p>"Abraham traveled from there toward the land of the South, and lived between Kadesh and Shur. He lived as a foreigner in Gerar.\nAbraham said about Sarah his wife, “She is my sister.” Abimelech king of Gerar sent, and took Sarah.\nBut God came to Abimelech in a dream of the night, and said to him, “Behold, you are a dead man, because of the woman whom you have taken. For she is a man’s wife.”\nNow Abimelech had not come near her. He said, “Lord, will you kill even a righteous nation?\nDidn’t he tell me, ‘She is my sister?’ She, even she herself, said, ‘He is my brother.’ In the integrity of my heart and the innocence of my hands I have done this.”\nGod said to him in the dream, “Yes, I know that in the integrity of your heart you have done this, and I also withheld you from sinning against me. Therefore I didn’t allow you to touch her.\nNow therefore, restore the man’s wife. For he is a prophet, and he will pray for you, and you will live. If you don’t restore her, know for sure that you will die, you, and all who are yours.”\nAbimelech rose early in the morning, and called all his servants, and told all these things in their ear. The men were very scared.\nThen Abimelech called Abraham, and said to him, “What have you done to us? How have I sinned against you, that you have brought on me and on my kingdom a great sin? You have done deeds to me that ought not to be done!”\nAbimelech said to Abraham, “What did you see, that you have done this thing?”\nAbraham said, “Because I thought, ‘Surely the fear of God is not in this place. They will kill me for my wife’s sake.’\nBesides, she is indeed my sister, the daughter of my father, but not the daughter of my mother; and she became my wife.\nWhen God caused me to wander from my father’s house, I said to her, ‘This is your kindness which you shall show to me. Everywhere that we go, say of me, “He is my brother.”’”\nAbimelech took sheep and cattle, male servants and female servants, and gave them to Abraham, and restored Sarah, his wife, to him.\nAbimelech said, “Behold, my land is before you. Dwell where it pleases you.”\nTo Sarah he said, “Behold, I have given your brother a thousand pieces of silver. Behold, it is for you a covering of the eyes to all that are with you. In front of all you are vindicated.”\nAbraham prayed to God. God healed Abimelech, and his wife, and his female servants, and they bore children.\nFor Yahweh had closed up tight all the wombs of the house of Abimelech, because of Sarah, Abraham’s wife.</p> -->
-<script src="./assets/js/script.js"></script>
+    <section id="book">
+        <form id="searchRead">
+            <label for="book">Book</label>
+            <select name="book" id="books">
+            </select>
+            <label for="chapter">Chapter</label>
+            <select name="chapter" id="chapter">
+            </select>
+            <label for="verse">Verse</label>
+            <select name="verse" id="verse">
+            </select>
+        </form>
+    </section>
+    <!-- <div id="bibleScriptures"></div> -->
+        <section id="versesToRead">
+        </section>
+
 </body>
+<script src="./assets/js/script.js"></script>
 </html>
