update the location of verse html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <section id="main">
         <section class="main-panel">
 
-        <iframe src="/verse.html" frameborder="0"></iframe>
+        <iframe src="./verse.html" frameborder="0"></iframe>
 
 
       </section>
