updating the timer and cleaning code

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <h3>Settings</h3>
           <button type="button" class="collapsible" id="reminder">Schedule Reminder</button>
           <div id="setReminderTime" class="content">
-            <form method="post" id="setter">
+            <form id="setter">
                 <h2>Pick the Date and Time</h2><br>
                 <Label for="date">Date</Label><br><br>
                 <input type="date" name="date" id="date"><br><br>
